[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resumablesha256"
version = "1.0"
description = "A resumable SHA-256 hasher using B-Con's sha256 C implementation"
authors = [
    {name = "Luke Moore"}
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = []
license = "Unlicense"
license-files = ["LICENSE.txt"]

[project.urls]
Homepage = "https://github.com/luke-moore/resumablesha256/"

[tool.hatch.build.targets.wheel]
universal = false

[tool.hatch.build.extensions.resumablesha256._sha256_ext]
sources = [
    "resumablesha256/_sha256_ext.c",
    "resumablesha256/bcon_sha256.c"
]
extra_compile_args = ["-O3"]

[tool.hatch.build.package-data]
resumablesha256 = ["bcon_sha256.h"]
