[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resumablehash"
version = "1.1"
description = "A resumable SHA-256 hasher using B-Con's sha256 C implementation"
authors = [
    {name = "Luke Moore"},
    {name = "Hannes Schmidt"}
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = []
license = "Unlicense"

[project.urls]
Homepage = "https://github.com/DataBiosphere/azul-resumablehash/"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
