[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resumablehash"
version = "1.3"
description = "Resumable hashers using B-Con's C implementations of SHA-256 and MD-5"
authors = [
    {name = "Luke Moore"},
    {name = "Hannes Schmidt"}
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = []
license = "Unlicense"

[project.urls]
Homepage = "https://github.com/DataBiosphere/azul-resumablehash/"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
